--- a/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show/edit-show.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show/edit-show.component.html
@@ -4,6 +4,6 @@
     </div>
     <div class="p-col-12 p-md-8">
         <app-edit-show-panel [imageShowResourceUrl]="imageShowResourceUrl" (imageShowSaved)="onImageShowSaved($event)"
-            (imageShowDeleted)="onImageShowDeleted($event)"></app-edit-show-panel>
+            (imageShowDeleted)="onImageShowDeleted($event)" [advanced]="true"></app-edit-show-panel>
     </div>
 </div>
