--- a/School-Managment-Frontend/src/main/web/src/app/addons/clock/clock.component.scss
+++ b/School-Managment-Frontend/src/main/web/src/app/addons/clock/clock.component.scss
@@ -4,3 +4,18 @@
     margin: 1vw;
 }
 
+.clock-message {
+    font-size: 3rem;
+    margin-top: 1rem;
+}
+
+.blink_me {
+    animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
+
