--- a/School-Managment-Frontend/src/main/web/src/app/area/area-overview/area-overview.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/area/area-overview/area-overview.component.html
@@ -3,12 +3,11 @@
 </div>
 <div class="p-grid p-mt-2">
   <div class="p-col-12 p-md-6">
-    <app-show-list [area]="area"></app-show-list>
-  </div>
-  <div class="p-col-12 p-md-6">
-    <app-monitor-dashboard editMonitorImageShow="true" [area]="area"></app-monitor-dashboard>
-  </div>
-  <div class="p-col-12 p-md-6">
+    <app-show-list [area]="area" (onUpdateImageShow)="onImageShowUpdate()"></app-show-list>
     <app-send-message [area]="area"></app-send-message>
+  </div>
+  <div class="p-col-12 p-md-6">
+    <app-monitor-dashboard editMonitorImageShow="true" [area]="area" [updateMonitors]="updateMonitors.asObservable()">
+    </app-monitor-dashboard>
   </div>
 </div>
