--- a/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show-panel/edit-show-panel.component.scss
+++ b/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show-panel/edit-show-panel.component.scss
@@ -18,6 +18,10 @@
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
+.cdk-overlay-container {
+  z-index: 1500 !important;
+}
+
 .cdk-drag-placeholder {
   opacity: 0;
 }
@@ -44,4 +48,8 @@
 
 .duration-label {
   border-right: 1px solid #ced4da;
+}
+
+.image-card {
+  border-color: rgb(107, 161, 20);
 }
